# ros2_mcp_bridge

./: .gitignore  AGENTS.md  README.md  package.xml  physical_test.py  ros2-mcp-bridge.service  setup.cfg  setup.py
config/: bridge.yaml
docs/: onit_configuration.md
launch/: bridge.launch.py
ros2_mcp_bridge/: __init__.py  behaviors.py  bridge.py  dsl_runtime.py  mcp_server.py  ros_node.py
test/: test_dsl_runtime.py
