<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_mcp_bridge</name>
  <version>0.1.0</version>
  <description>
    MCP (Model Context Protocol) bridge for ROS 2. Exposes ROS 2 topics and
    services as MCP tools that LLM agents (e.g. OnIt) can call directly.
    Supports auto-discovery of topics and YAML-configurable tool definitions.
  </description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>vision_msgs</depend>

  <!-- Optional: Nav2 actions -->
  <exec_depend condition="$ROS_DISTRO == humble or $ROS_DISTRO == iron">nav2_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
